Replaces all String#formatted calls with String.format(Locale.ROOT, ...) to avoid lang crashes